# research-to-deck-ibh

./: Procfile  pyproject.toml  railway.toml  requirements.txt  vercel.json
agents/: __init__.py  architect.py  base.py  brief.py  orchestrator.py  researcher.py  reviewer.py  validator.py  writer.py
src/: index.py
