[project]
name = "research-to-deck"
version = "2.0.0"
description = "Multi-agent research-to-deck pipeline with Gamma integration"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "httpx==0.27.2",
    "python-pptx==1.0.2",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agents*", "src*"]
